--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,4 +1,5 @@
 {
+    "pharmacy_name": "سیستم مدیریت داروخانه کلینیک موفق",
    "discount": "تخفیف",
       "prescription_date": "تاریخ نسخه",
       "sale_date": "تاریخ فروش",
@@ -111,5 +112,6 @@
           "visits": "ویزیت ها",
           "visit": "ویزیت ",
              "sale": "فروش",
+             "language": "زبان",
   "@@locale": "fa"
 }
