adding and changing resources

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
     "pharmacy_name": "Moaffagh Pharmacy Management System",
+    "pharmacy": "Pharmacy Management System",
    "discount": "Discount",
     "prescription_date": "Prescription Date",
     "sale_date": "Sale Date",
