--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,5 +1,6 @@
 {
     "pharmacy_name": "سیستم مدیریت داروخانه کلینیک موفق",
+    "pharmacy": "سیستم مدیریت داروخانه",
    "discount": "تخفیف",
       "prescription_date": "تاریخ نسخه",
       "sale_date": "تاریخ فروش",
