--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,7 @@
     "employees": "Employees",
     "register_medicine": "Register Medicine",
     "register_customer": "Register Customer",
+    "new_customer": "New Customer",
     "warehouse": "Warehouse",
     "daily_sales": "Daily Sales",
     "daily_purchases": "Daily Purchases",
@@ -96,7 +97,7 @@
         "about": "About",
         "medicine_list": "Medicine List",
         "patient_list": "Patient List",
-        "customer_list": "Customer List",
+        "customer_list": "Customers List",
         "doctor_list": "Doctor List",
         "nnew": "New",
         "price": "Price",
