--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -14,6 +14,7 @@
       "employees": "کارمندان",
       "register_medicine": "ثبت دوا",
       "register_customer": "ثبت مشتری",
+      "new_customer": "مشتری جدید",
       "warehouse": "انبار",
       "daily_sales": "فروشات روز",
       "daily_purchases": "خریدات روز",
