Ui edit and database for doctor and customer

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -39,7 +39,7 @@
     "expiration_date": "Expiration Date",
     "purchase_invoice_list": "Purchase Invoice List",
     "filter": "Filter",
-    "search_by": "Search By",
+    "search": "Search",
     "paid_amount": "Paid Amount",
     "prescription_list": "Prescription List",
     "doctor_name": "Doctor Name",
@@ -62,7 +62,7 @@
     "employee_reports": "Employee Reports",
     "medicine_reports": "Medicine Reports",
     "total_income_expenses": "Total Income and Expenses",
-    "sales_report_list": "Sales Report List",
+    "sales_list": "Sales List",
     "employee_list": "Employee List",
     "employee_name": "Employee Name",
     "quantity": "Quantity",
