--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -39,7 +39,7 @@
       "expiration_date": "تاریخ انقضا",
       "purchase_invoice_list": "لیست فاکتور های خرید",
       "filter": "فیلتر کردن",
-      "search_by": "جستجو بر اساس",
+      "search": "جستجو",
       "paid_amount": "مبلغ پرداختی",
       "prescription_list": "لیست نسخه ها",
       "doctor_name": "نام داکتر",
@@ -62,7 +62,7 @@
       "employee_reports": "گزارشات کارمندان",
       "medicine_reports": "گزارشات دوا",
       "total_income_expenses": "مجموعه عواید و مصارف",
-      "sales_report_list": "لیست گزارشات فروش",
+      "sales_list": "لیست فروشات",
       "employee_list": "لیست کارمندان",
       "employee_name": "نام کارمند",
       "quantity": "مقدار",
