--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -63,7 +63,7 @@
       "medicine_reports": "گزارشات دوا",
       "total_income_expenses": "مجموعه عواید و مصارف",
       "sales_list": "لیست فروشات",
-      "employee_list": "لیست کارمندان",
+      "employees": " کارمندان",
       "employee_name": "نام کارمند",
       "quantity": "مقدار",
       "invoice_number": "شماره فاکتور",
@@ -95,10 +95,10 @@
             "backup": "پشتیبان گیری",
             "settings": "تنظیمات",
             "about": "درباره",
-            "medicine_list": "لیست دوا ها",
-            "patient_list": "لیست مریضان",
-            "customer_list": "لیست مشتری ها",
-            "doctor_list": "لیست داکتران",
+            "medicines": " دوا ها",
+            "patients": " مریضان",
+            "customers": " مشتری ها",
+            "doctors": " داکتران",
             "nnew": "جدید",
             "price": "قیمت",
             "age": "سن",
@@ -106,14 +106,30 @@
             "patients": "مریضان",
             "doctors": "داکتران",
              "username": "نام کاربر",
-             "role": "نقس کاربر",
+             "role": "نقش کاربر",
             "password": "رمز",
                "seller": "فروشنده",
              "expenses": "مصارف",
-             "visit_list": "لیست ویزیت ها",
+             "visits": " ویزیت ها",
           "visits": "ویزیت ها",
           "visit": "ویزیت ",
              "sale": "فروش",
              "language": "زبان",
+              "id": "آیدی",
+               "email": "ایمیل",
+               "patientsList": "لیست مریضان",
+               "specialty": "تخصص",
+               "registerEmployee": "ثبت کارمند",
+               "delete": "حذف",
+               "confirmDelete": "آیا میخواهید این مورد را حذف کنید؟",
+               "yes": "بله",
+               "no": "نخیر",
+                 "newVisit": "ویزیت جدید",
+                 "newexpense": "مصرف جدید",
+                 "consumption": "مصرف",
+                 "newPatient": "مریض جدید",
+                 "newDoctor": "داکتر جدید",
+                 "newEmployee": "کارمند جدید",
+                 "newMedicine": "دوای جدید",
   "@@locale": "fa"
 }
