--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -63,7 +63,7 @@
     "medicine_reports": "Medicine Reports",
     "total_income_expenses": "Total Income and Expenses",
     "sales_list": "Sales List",
-    "employee_list": "Employee List",
+    "employees": "Employees",
     "employee_name": "Employee Name",
     "quantity": "Quantity",
     "invoice_number": "Invoice_Number",
@@ -95,10 +95,10 @@
         "backup": "Backup",
         "settings": "Settings",
         "about": "About",
-        "medicine_list": "Medicine List",
-        "patient_list": "Patient List",
-        "customer_list": "Customers List",
-        "doctor_list": "Doctor List",
+        "medicines": "Medicines",
+        "patients": "Patients",
+        "customers": "Customers",
+        "doctors": "Doctors",
         "nnew": "New",
         "price": "Price",
         "age": "Age",
@@ -110,10 +110,26 @@
           "password": "Password",
           "seller": "Seller",
           "expenses": "Expenses",
-          "visit_list": "Visit List",
+          "visits": "Visits",
           "visits": "Visits",
           "visit": "Visit",
           "sale": "Sale",
           "language": "Lang",
+            "id": "ID",
+            "email": "Email",
+            "patientsList": "Patients List",
+            "specialty": "Specialty",
+            "registerEmployee": "Register Employee",
+            "delete": "Delete",
+            "confirmDelete": "Do you want to delete this item?",
+            "yes": "Yes",
+            "no": "No",
+              "newVisit": "New Visit",
+              "newexpense": "New Expense",
+              "consumption": "Consumption",
+              "newPatient": "New Patient",
+              "newDoctor": "New Doctor",
+              "newEmployee": "New Employee",
+              "newMedicine": "New Medicine",
   "@@locale": "en"
 }
