--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,6 +4,7 @@
    "discount": "Discount",
     "prescription_date": "Prescription Date",
     "sale_date": "Sale Date",
+  "type": "Type",
     "related_doctor": "Related Doctor",
     "prescription_number": "Prescription Number",
     "patient_name": "Patient Name",
@@ -17,6 +18,9 @@
     "new_customer": "New Customer",
     "warehouse": "Warehouse",
     "daily_sales": "Daily Sales",
+    "register_companies": "Register Companies",
+    "register_generic": "Register Generic Name",
+    "company_name": "Company Name",
     "daily_purchases": "Daily Purchases",
     "daily_expenses": "Daily Expenses",
     "daily_prescriptions": "Daily Prescriptions",
@@ -25,7 +29,10 @@
     "total_price": "Total Price",
     "prescription_amount": "Prescription Amount",
     "amount_payable": "Amount Payable",
-    "generic_name": "Generic Name",
+    "generic_names": "Generic Names",
+    "created_at": "Created At",
+    "updated_at": "Updated At",
+    "companies": "Companies",
     "trade_name": "Trade Name",
     "barcode": "Barcode",
     "batch_number": "Batch Number",
