--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -2,6 +2,7 @@
     "pharmacy_name": "سیستم مدیریت داروخانه کلینیک موفق",
     "pharmacy": "سیستم مدیریت داروخانه",
    "discount": "تخفیف",
+   "type": "نوع",
       "prescription_date": "تاریخ نسخه",
       "sale_date": "تاریخ فروش",
       "related_doctor": "داکتر مربوطه",
@@ -26,10 +27,16 @@
       "prescription_amount": "مبلغ نسخه",
       "amount_payable": "مبلغ قابل پرداخت",
       "generic_name": "نام جنریک",
+      "created_at": "ایجاد شده در",
+      "updated_at": "به‌روزرسانی شده در",
+      "companies": " شرکت ها",
+      "company_name": " نام شرکت",
       "trade_name": "نام تجارتی",
       "barcode": "بارکد",
       "batch_number": "بچ نمبر",
       "register_customer": "ثبت مشتری",
+      "register_companies": "ثبت شرکت ها",
+      "register_generic": "ثبت نام عمومی",
       "customer_name": "نام مشتری",
       "surname": "تخلص",
       "address": "آدرس",
