report pages added

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -131,5 +131,6 @@
               "newDoctor": "New Doctor",
               "newEmployee": "New Employee",
               "newMedicine": "New Medicine",
+              "journal": "Journal",
   "@@locale": "en"
 }
