--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -131,5 +131,6 @@
                  "newDoctor": "داکتر جدید",
                  "newEmployee": "کارمند جدید",
                  "newMedicine": "دوای جدید",
+                  "journal": "روزنامچه",
   "@@locale": "fa"
 }
