--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,8 +1,12 @@
 {
     "id": "آیدی",
+    "suppliers": "عرضه کننده ها",
+    "supplier": "عرضه کننده",
+    "new_supplier": "عرضه کننده جدید",
+    "supplier_name": "نام عرضه کننده",
     "pharmacy_name": "سیستم مدیریت داروخانه کلینیک موفق",
     "pharmacy": "سیستم مدیریت داروخانه",
-   "discount": "تخفیف",
+    "discount": "تخفیف",
    "type": "نوع",
       "prescription_date": "تاریخ نسخه",
       "sale_date": "تاریخ فروش",
@@ -17,7 +21,7 @@
       "register_medicine": "ثبت دوا",
       "register_customer": "ثبت مشتری",
       "new_customer": "مشتری جدید",
-      "warehouse": "انبار",
+      "stock": "انبار",
       "daily_sales": "فروشات روز",
       "daily_purchases": "خریدات روز",
       "daily_expenses": "مصارف روز",
