working on purchases

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
     "id": "ID",
+    "print": "Print",
     "suppliers": "Suppliers",
     "supplier": "Supplier",
     "new_supplier": "New Supplier",
