--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,5 +1,6 @@
 {
     "id": "آیدی",
+    "print": "چاپ",
     "suppliers": "عرضه کننده ها",
     "supplier": "عرضه کننده",
     "new_supplier": "عرضه کننده جدید",
