medicines related files updated

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,6 +10,9 @@
    "discount": "Discount",
     "prescription_date": "Prescription Date",
     "sale_date": "Sale Date",
+    "delete_item": "Are you sure you want to delete this item?",
+  "cancel": "Cancel",
+  "accept": "Ok",
   "type": "Type",
     "related_doctor": "Related Doctor",
     "prescription_number": "Prescription Number",
@@ -19,7 +22,7 @@
     "register_prescription": "Register Prescription",
     "purchase_invoice": "Purchase Invoice",
     "employees": "Employees",
-    "register_medicine": "Register Medicine",
+    "add_medicine": "Add Medicine",
     "register_customer": "Register Customer",
     "new_customer": "New Customer",
     "stock": "Stock",
@@ -35,7 +38,6 @@
     "total_price": "Total Price",
     "prescription_amount": "Prescription Amount",
     "amount_payable": "Amount Payable",
-    "generic_names": "Generic Names",
     "generic_name": "Generic Name",
     "created_at": "Created At",
     "updated_at": "Updated At",
@@ -70,6 +72,7 @@
     "date": "Date",
     "time": "Time",
     "sales_reports": "Sales Reports",
+    "sellPrice": "Sell Price",
     "purchase_reports": "Purchase Reports",
     "expense_reports": "Expense Reports",
     "doctor_reports": "Doctor Reports",
@@ -115,6 +118,7 @@
         "doctors": "Doctors",
         "nnew": "New",
         "price": "Price",
+        "buyPrice": "Buy Price",
         "age": "Age",
         "gender": "Gender",
           "patients": "Patients",
@@ -124,7 +128,6 @@
           "password": "Password",
           "seller": "Seller",
           "expenses": "Expenses",
-          "visits": "Visits",
           "visits": "Visits",
           "visit": "Visit",
           "sale": "Sale",
