--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -8,9 +8,15 @@
     "pharmacy_name": "سیستم مدیریت داروخانه کلینیک موفق",
     "pharmacy": "سیستم مدیریت داروخانه",
     "discount": "تخفیف",
-   "type": "نوع",
+     "type": "نوع",
+  "add_medicine": "افزودن دوا",
       "prescription_date": "تاریخ نسخه",
-      "sale_date": "تاریخ فروش",
+  "delete_item": "آیا مطمئن هستید که می‌خواهید این مورد را حذف کنید؟",
+  "cancel": "لغو",
+  "accept": "تأیید",
+  "sale_date": "تاریخ فروش",
+      "sellPrice": "قیمت فروش",
+      "buyPrice": "قیمت خرید",
       "related_doctor": "داکتر مربوطه",
       "prescription_number": "شماره نسخه",
       "patient_name": "نام مریض",
@@ -19,7 +25,6 @@
       "register_prescription": "ثبت نسخه",
       "purchase_invoice": "فاکتور خرید",
       "employees": "کارمندان",
-      "register_medicine": "ثبت دوا",
       "register_customer": "ثبت مشتری",
       "new_customer": "مشتری جدید",
       "stock": "انبار",
